<resources>
    <string name="app_name">Soc</string>

    <string name="facebook_app_id">6161985857254099</string>
    <string name="facebook_client_token">10e127048d1937c440d0a55941d08f28</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="phone_number">Phone number</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="confirm_password">Confirm password</string>
    <string name="invalid_phone_number">Invalid phone number</string>
    <string name="forgot_password"><u>Forgot password?</u></string>
    <string name="error">Error</string>
    <string name="otp_authen">OTP Authentication</string>
    <string name="otp_authen_description">We will send the verification code\nto your phone</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="not_receive_otp">Not receive otp?</string>
    <string name="unexpected_error">Unexpected error</string>
    <string name="discovery">Discovery</string>
    <string name="promotion">Promotion</string>
    <string name="order">Order</string>
    <string name="account">Account</string>
    <string name="search_food">Search for a food item</string>
    <string name="categories">Categories</string>
    <string name="choose_the">Choose the</string>
    <string name="food_that_you_love">Food that you love</string>
    <string name="image_for_user">image for user</string>
    <string name="image_for_title">image for title</string>
    <string name="mua_ngay">Mua ngay</string>
    <string name="distance">%.2fkm</string>
    <string name="user">User</string>
    <string name="user_title">Cá nhân</string>
    <string name="user_info">Thông tin người dùng</string>
    <string name="label_user_name">Tên đăng nhập</string>
    <string name="full_name">Họ và tên</string>
    <string name="required">* Bắt buộc</string>
    <string name="label_password">Mật khẩu</string>
    <string name="label_gender">Giới tính</string>
    <string name="label_phonenumber">Số điện thoại</string>
    <string name="label_province">Thành phố/ Tỉnh</string>
    <string name="label_district">Quận/ Huyện</string>
    <string name="label_ward">Phường/ Xã</string>
    <string name="label_email">Email</string>
    <string name="label_address">Địa chỉ</string>
    <string name="label_dob">Ngày sinh</string>
    <string name="label_bank">Ngân hàng liên kết</string>
    <string name="label_intro">Giới thiệu</string>
    <string name="log_out">Đăng xuất</string>
    <string name="update">Cập nhật</string>
    <string name="more">more...</string>
    <string name="payment_method">Phương thức thanh toán</string>
    <string name="payment">Thanh toán</string>
    <string name="order_now">Đặt hàng</string>
    <string name="sum_payment">Tổng thanh toán</string>
    <string name="informationUser">Nguyễn Văn A | (+84) 12 345 678\nSố nhà xx ngõ xx\nQuận Hà Đông, Phường Mộ Lao, Hà Nội
    </string>
    <string name="title_receive_item">Địa chỉ nhận hàng</string>
    <string name="delivery_form">Hình Thức Giao Hàng</string>
    <string name="voucher">Voucher</string>
    <string name="total_money">Tổng tiền hàng:</string>
    <string name="choose_or_enter_voucher">Chọn hoặc nhập mã</string>
    <string name="total_delivery">Tổng phí tiền vận chuyển:</string>
    <string name="total_money_format">Tổng tiền (%s sản phẩm):</string>
    <string name="total_payment">Tổng tiền thanh toán:</string>
    <string name="choose_payment_method">Chọn phương thức\nthanh toán</string>
    <string name="agree">Đồng ý</string>
    <string name="edit_user_title">Sửa hồ sơ</string>
    <string name="edit_label">Sửa</string>
    <string name="consumer">Thành viên</string>
    <string name="staff">Nhân viên</string>
    <string name="choose_province">Chọn Thành phố/ Tỉnh</string>
    <string name="choose_district">Chọn Quận/ Huyện</string>
    <string name="choose_ward">Chọn Phường/ Xã</string>
    <string name="not_found_product">Not found product</string>
    <string name="cart">Giỏ hàng</string>
    <string name="buy_now">Mua hàng</string>
    <string name="total_price">Tổng tiền: %s</string>
    <string name="delete">Xóa</string>
    <string name="default_notification_channel_id">PROMOTION-NOTIFICATION-CHANNEL-ID</string>
</resources>